Game classes have been added. The artist project is created and integrated with java